--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -117,6 +117,9 @@
             try {
                 const response = await fetch('http://localhost:8081/checkout', {
                     method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
                     body: JSON.stringify(data),
                 });
 
