--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -74,8 +74,9 @@
 
     <script>
         const items = [
-            { name: "Book A", quantity: 1 },
-            { name: "Book B", quantity: 2 }
+            { name: "Dune", quantity: 2 },
+            //{ name: "Book A", quantity: 1 },
+            //{ name: "Book B", quantity: 2 }
         ];
 
         const itemListElement = document.getElementById('itemList');
